# pc-monitor

./: .gitignore  Cargo.toml
.cargo/: config.toml
script/: cpu-net-monitor.py  cpu-usage.py
src/: display.rs  main.rs  packet.rs  utils.rs
